# safe_tool

./: README.md  config.yaml  demo.yml  demo1-report.json  demo1.py  demo1.yml  pyproject.toml  safe.py
safe_tool/: __init__.py  analysis.py  checks.py  cli.py  commands.py  config.py  constants.py  engine.py  models.py  output.py
safe_tool/agent/: __init__.py  deepseek.py  orchestrator.py  planner.py  policy.py  trace.py
tests/: test_agent.py  test_analysis.py  test_checks.py  test_cli.py  test_config.py
