[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-tool"
version = "0.1.0"
description = "Safety CLI for Ansible-compatible operations"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
    "pytest>=8.0",
]

[project.scripts]
safe = "safe_tool.cli:main"
